# paralaser

./: .gitignore  README.md  install_external_tools.sh  install_models.sh  process.sh  pyproject.toml  remove_external_tools.sh
dev/: input.txt  paraphrases.txt
paralaser/: __init__.py  __main__.py  binary_offsets.py  embed.py  models.py  paraphrase.py  similarity_search.py  tools.py
paralaser/lib/: indexing.py  romanize_lc.py  text_processing.py
source/: paraphrase.py  similarity_search.py
